--- a/index-css.css
+++ b/index-css.css
@@ -13,4 +13,13 @@ h4,
 h5,
 h6{
   font-family: "Fjalla One", sans-serif;
+  font-weight: 600;
+}
+
+h1{
+  font-size: 40px;
+  line-height: 0px;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  /* text-decoration: underline; */
 }
